task2/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: frontend:v1
        ports:
        - name: web
          containerPort: 80
#        livenessProbe:
#          httpGet:
#            port: 80
#            path: /
#          initialDelaySeconds: 15
#          periodSeconds: 10
#          timeoutSeconds: 3
#        readinessProbe:
#          httpGet:
#            port: 80
#            path: /health
#          initialDelaySeconds: 15
#          periodSeconds: 5
