task2/service-frontend.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
spec:
  type: NodePort
  ports:
  - port: 9000
    targetPort: web
    protocol: TCP
    nodePort: 30010
  selector:
    app: frontend
